--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -1,4 +1,26 @@
+:root {
+    --primary-background: #F7F7F9;
+    --font-weight: 500;
+    --font-size: 16px;
+    --font-color: #000;
+    --link-color: #0D6EFD;
+    --white-color: #ffffff;
+}
 
+@font-face {
+    font-family: "Raleway";
+    src: url('../../Assets/font/Raleway-VariableFont_wght.ttf');
+}
+
+@font-face {
+    font-family: "Poppins";
+    src: url('../../Assets/font/Poppins-Regular.ttf');
+}
+
+@font-face {
+    font-family: "AlfaSlabOne";
+    src: url('../../Assets/font/AlfaSlabOne-Regular.ttf');
+}
 
 /* Navbar Styles */
 .navbar-nav .dropdown-menu {
