--- a/src/assets/style/signin.scss
+++ b/src/assets/style/signin.scss
@@ -1,32 +1,3 @@
-.m-signin-form{
-  display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-  line-height: 1.5;
-  label{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    input{
-        height: 25px;
-        padding: 0 20%;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        margin-bottom: 10px;
-        &:focus{
-            outline: none;
-            border-color: #2e6da4;
-            box-shadow: 0 0 10px #719ECE;
-        }
-    }
-  }
-  section{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-  }
+.card-body{
+  padding: 3em 4em 0 4em !important;
 }
