--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -189,7 +189,7 @@ section {
     flex-direction: column;
     background-color: var(--white-color) !important;
     border-radius: 10px;
-    max-width: 18em;
+    max-width: 16em;
     width: 18em;
     margin: 1em 0;
     margin-right: 1em;
@@ -325,7 +325,7 @@ padding-right: 19px;
     align-items: center;
 }
 
-#pub .mv-content {
+.mv-content {
     height: 100%;
     width: 100%;
 }
@@ -542,4 +542,16 @@ padding-right: 19px;
 .arrow {
     height: 20px;
     width: 20px;
+}
+
+.span-microphone {
+    position: absolute;
+    right: 10px;
+    bottom: 7px;
+    border-left: 1px solid #d1d5db;
+    padding-left: 10px;
+}
+
+.martop-10 {
+    margin-top: 10px;
 }
