--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -227,6 +227,7 @@ padding-right: 19px;
     height: 25vh;
     min-height: 245px;
     width: 113%;
+    box-shadow: rgba(128, 128, 128, 0.3215686275) 10px 10px 10px;
 }
 
 .m-div-new-shoes img{
