--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -59,27 +59,30 @@
     padding: 20px 0 40px 0;
     background: var(--white-color);
     font-size: 16px;
+
     .navbar-left {
         float: left;
     }
+
     .navbar-right {
         float: right;
     }
-}
 
+    .ul {
+        li {
+            display: inline;
+            padding-left: 20px;
 
-.ul li {
-    display: inline;
-    padding-left: 20px;
-}
+            a {
+                color: #777777;
+                text-decoration: none;
 
-.ul li a {
-    color: #777777;
-    text-decoration: none;
-}
-
-.ul li a:hover {
-    color: black;
+                &:hover {
+                    color: black;
+                }
+            }
+        }
+    }
 }
 
 /* Shopping Cart Styles */
@@ -94,83 +97,87 @@
     position: relative;
     border-radius: 3px;
     padding: 20px;
-}
 
-.shopping-cart .shopping-cart-header {
-    margin-top: -26px;
-    border-bottom: 1px solid #E8E8E8;
-    padding-bottom: 15px;
-}
+    .shopping-cart-header {
+        margin-top: -26px;
+        border-bottom: 1px solid #E8E8E8;
+        padding-bottom: 15px;
 
-.shopping-cart .shopping-cart-header .shopping-cart-total {
-    float: right;
-    font-weight: bold;
-}
+        .shopping-cart-total {
+            float: right;
+            font-weight: bold;
+        }
+    }
 
-.shopping-cart-items .img {
-    float: left;
-    margin-right: 12px;
-}
+    .shopping-cart-items {
+        .img {
+            float: left;
+            margin-right: 12px;
+        }
 
-.shopping-cart-items .item-name {
-    margin-bottom: auto;
-    font-family: 'Raleway';
-    font-weight: 500;
-    line-height: 1.25;
-}
+        .item-name {
+            margin-bottom: auto;
+            font-family: 'Raleway';
+            font-weight: 500;
+            line-height: 1.25;
+        }
 
-.shopping-cart-items .item-price {
-    display: block;
-    font-family: 'Raleway';
-    font-weight: 500;
-    line-height: 1.25;
-    margin-left: 78px;
-    margin-top: -25px;
-    color: #000;
-}
+        .item-price {
+            display: block;
+            font-family: 'Raleway';
+            font-weight: 500;
+            line-height: 1.25;
+            margin-left: 78px;
+            margin-top: -25px;
+            color: #000;
+        }
 
-.shopping-cart-items .item-quantity {
-    font-family: 'Raleway';
-    font-weight: 500;
-    line-height: 1.25;
-    margin-left: 78px;
-    color: #000;
-}
+        .item-quantity {
+            font-family: 'Raleway';
+            font-weight: 500;
+            line-height: 1.25;
+            margin-left: 78px;
+            color: #000;
+        }
+    }
 
-.shopping-cart:after {
-    bottom: 100%;
-    left: 89%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-    border-bottom-color: white;
-    border-width: 8px;
-    margin-left: -8px;
-}
+    &:after {
+        bottom: 100%;
+        left: 89%;
+        border: solid transparent;
+        content: " ";
+        height: 0;
+        width: 0;
+        position: absolute;
+        pointer-events: none;
+        border-bottom-color: white;
+        border-width: 8px;
+        margin-left: -8px;
+    }
 
-.cart-icon {
-    color: #515783;
-    font-size: 24px;
-    margin-right: 7px;
-}
+    .cart-icon {
+        color: #515783;
+        font-size: 24px;
+        margin-right: 7px;
+    }
 
-.button {
-    color: var(--link-color);
-    text-align: center;
-    padding: 12px;
-    text-decoration: none;
-    display: block;
-    border-radius: 3px;
-    font-size: 16px;
-    margin: 25px 0 15px 0;
+    .button {
+        color: var(--link-color);
+        text-align: center;
+        padding: 12px;
+        text-decoration: none;
+        display: block;
+        border-radius: 3px;
+        font-size: 16px;
+        margin: 25px 0 15px 0;
+    }
 }
 
 /* Additional Styles */
-.m-div-filters div {
-    margin: 0px 10px;
+.m-div-filters {
+    div {
+        margin: 0px 10px;
+    }
 }
 
 .m-text {
@@ -186,13 +193,13 @@
     height: 35.5px;
     flex-shrink: 0;
     background-color: #0D6EFD;
-}
 
-.btn-add-cart span {
-    font-weight: 100;
-    color: white;
-    position: absolute;
-    bottom: -17px;
-    right: 8px;
-    font-size: 45px;
+    span {
+        font-weight: 100;
+        color: white;
+        position: absolute;
+        bottom: -17px;
+        right: 8px;
+        font-size: 45px;
+    }
 }
