--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -6,7 +6,7 @@ body {
 }
 
 main {
-    min-height: 73vh;
+    min-height: 80vh;
 }
 
 section {
@@ -16,7 +16,8 @@ section {
 
 .container {
     margin-left: 0px !important;
-    min-width: 100%;
-
 }
 
+.container-cart {
+    min-width: 100%;
+}
