Ceci est la combinaison de 2 commits.
add cart data

adding cart

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -91,7 +91,7 @@
 }
 
 .shopping-cart {
-    margin: 20px 0;
+    margin: 20px -21px;
     float: right;
     width: 320px;
     position: relative;
