--- a/src/Assets/style/login.scss
+++ b/src/Assets/style/login.scss
@@ -19,3 +19,12 @@
   a{
     text-decoration: none !important;
   }
+
+  .login {
+    width: 100%;
+    margin: 0px;
+    position: absolute;
+    top: -50px;
+    left: 0;
+    height: 101vh !important;
+  }
