--- a/src/Components/ChatMsgs/ChatMsgs.scss
+++ b/src/Components/ChatMsgs/ChatMsgs.scss
@@ -18,6 +18,8 @@ section {
     .msg
     {
     max-height: 50vh;
+    min-height: 50vh;
+    background-color: white;
     overflow: scroll;
     width: 100%;
     /* padding: 0; */
