fix navbar scss

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -212,5 +212,9 @@
         font-size: 45px;
     }
 }
-
+.fa-shopping-cart:before {
+    content: "\f07a";
+    margin-left: 5px;
+    margin-right: 5px;
+}
 
