--- a/src/Assets/style/login.scss
+++ b/src/Assets/style/login.scss
@@ -2,6 +2,7 @@
     background: #6a11cb !important;
     background: -webkit-linear-gradient(to top, rgb(3, 36, 50), rgb(13, 110, 253)) !important;
     background: linear-gradient(to top, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1)) !important;
+  width: 100% !important;
   }
   .card{
     border: 1px solid rgba(0,0,0,.125)!important;
