--- a/src/Assets/style/signin.scss
+++ b/src/Assets/style/signin.scss
@@ -13,7 +13,7 @@
     input{
         height: 25px;
         padding: 0 20%;
-        border: 1px solid #ccc;
+        border: 1px solid #000000 !important;
         border-radius: 4px;
         margin-bottom: 10px;
         &:focus{
@@ -32,4 +32,12 @@
 }
 .card-body{
   padding: 3em 4em 0 4em !important;
+}
+input{
+  border: #5b5959 1px solid !important;
+}
+input:focus{
+  border: #2e6da4 1px solid !important;
+    box-shadow: 0 0 10px #719ECE;
+
 }
