--- a/src/Components/Checkout/chechout.scss
+++ b/src/Components/Checkout/chechout.scss
@@ -1,7 +1,31 @@
 
+.m-cont{
+    margin: 0 auto;
+    width: 100%;
+    max-width: 500px;
+    padding: 20px;
+    border-radius: 6px;
+    box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
+    background: #fff;
+    margin-top: 50px;
+    margin-bottom: 50px;
 
+}
+.a-payment-line{
+    width: 80%;
+  height: 1px;
+  background: #151515;
+}
 
-
+.a-tatal{
+    display: flex;
+  flex-direction: row;
+    justify-content: space-between;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 18px;
+  padding-right: 90px;
+}
 .stripe-button {
   height: 36px;
   background: #556cd6;
